Sun Jan 31 18:29:22 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* times.c (trivfs_set_atime, trivefs_set_mtime): Take advantage of
	new semantics for file_utimes.

1998-08-20  Roland McGrath  <roland@baalperazim.frob.com>

	* file-get-fs-options.c (trivfs_S_file_get_fs_options):
	fshelp_return_malloced_buffer renamed to iohelp_*.
	* fsys-get-options.c (trivfs_S_fsys_get_options): Likewise.

1998-07-20  Roland McGrath  <roland@baalperazim.frob.com>

	* dir-lookup.c (trivfs_S_dir_lookup): Fix brainos in last change.

Tue Jul 14 16:47:28 1998  Thomas Bushnell, n/BSG  <tb@mit.edu>

	* dir-lookup.c (trivfs_S_dir_lookup): In null-pathname case, this
	should work even for non-directories, so actually do it, making
	this a simpler case of trivfs_S_fsys_getroot.

Thu Feb 20 13:13:13 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* protid-classes.c (trivfs_protid_portclasses,
 	trivfs_protid_nportclasses): Make common.
	* cntl-classes.c (trivfs_cntl_portclasses,
	trivfs_cntl_nportclasses): Likewise.

Tue Feb 18 19:47:16 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* cntl-create.c (trivfs_create_control): Put the actual port
	creation call back in!

Fri Feb 14 02:10:50 1997  Miles Bader  <miles@gnu.ai.mit.edu>

	* dyn-classes.c: New file.
	* cntl-create.c (trivfs_create_control): Possibly allocate and add
	the port classes/buckets to the list of ones recognized by trivfs.
	* migsupport.c
	(trivfs_begin_using_protid): Support dynamic protid port classes.
	(trivfs_begin_using_control): Support dynamic control port classes.
	* cntl-clean.c (trivfs_clean_cntl): Clean up dynamic port
	classes/buckets.
	* trivfs.h (trivfs_add_control_port_class,
	trivfs_add_protid_port_class, trivfs_add_port_bucket,
	trivfs_remove_control_port_class, trivfs_remove_protid_port_class,
	trivfs_remove_port_bucket): New declarations.
	Doc fixes.
	* priv.h (trivfs_dynamic_protid_port_classes,
	trivfs_num_dynamic_protid_port_classes,
	trivfs_dynamic_control_port_classes,